# python-project-50

./: .coverage  .gitignore  README.md  coverage.xml  gendiff1.cast  gendiff2.cast  pyproject.toml
.github/workflows/: ci.yml  cii.yml  hexlet-check.yml  my_workflow.yml
gendiff/: __init__.py  generate_diff.py  parser.py
gendiff/format/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  logic.py  parser.py
hexlet_code.egg-info/: PKG-INFO
tests/: test_gendiff.py
