[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The package allows to compare two configuration files and show a difference."
authors = ["Miсhael Belvedersky <mike.belveder@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" }
]


[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.ruff]
# Base settings like line-length stay here
line-length = 88

[tool.ruff.lint]
# Move these here
select = ["E", "F", "W"]
ignore = []